--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -8,7 +8,8 @@
 # Maintainer: Dominic Meiser <git@msrd0.de>
 pkgname=rust
 pkgver=1.75.0
-_llvmver=17
+_llvmver=16
+[ "$ALPINE_VERSION" == "3.19" ] && _llvmver=17
 _bootver=1.74.1
 pkgrel=0
 pkgdesc="The Rust Programming Language"
