--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         arch: ["aarch64", "armhf", "armv7"]
-        alpine_version: ["3.18", "3.19", "3.20"]
+        alpine_version: ["3.19", "3.20"]
         latest_alpine_version: ["3.20"]
     steps:
       - uses: actions/checkout@v4
