--- a/rust/APKBUILD
+++ b/rust/APKBUILD
@@ -7,11 +7,10 @@
 # Contributor: psykose <alice@ayaya.dev>
 # Maintainer: Dominic Meiser <git@msrd0.de>
 pkgname=rust
-pkgver=1.80.1
-_llvmver=16
-[ "$ALPINE_VERSION" == "3.19" ] && _llvmver=17
-[ "$ALPINE_VERSION" == "3.20" ] && _llvmver=18
-_bootver=1.79.0
+pkgver=1.83.0
+_llvmver=18
+[ "$ALPINE_VERSION" == "3.21" ] && _llvmver=19
+_bootver=1.82.0
 pkgrel=0
 pkgdesc="The Rust Programming Language"
 url="https://www.rust-lang.org/"
@@ -107,6 +106,7 @@ source="
 	need-ssp_nonshared.patch
 	9950-alpine-arm-target-linker.patch
 	check-rustc
+	correct-less-r-flag.patch
 	"
 builddir="$srcdir/rustc-$pkgver-src"
 
@@ -169,6 +169,7 @@ build() {
 		--set="rust.deny-warnings=false" \
 		--set="rust.parallel-compiler=false" \
 		--set="rust.remap-debuginfo=true" \
+		--set="rust.lld=false" \
 		--set="rust.description=Alpine Linux $pkgver-r$pkgrel" \
 		--set="target.$_target.llvm-config=/usr/lib/llvm$_llvmver/bin/llvm-config" \
 		--set="target.$_target.musl-root=/usr" \
@@ -360,16 +361,17 @@ _mv() {
 }
 
 sha512sums="
-7b043664eea007d17ff18574bcb1850ccdf2fa9d73acb50938eff906c590e4c94d03d9bedabf8fe615215c532922f7d63d762ad5da5add567b63ff257a2499b2  rust-1.79.0-x86_64-unknown-linux-musl.tar.gz
-e33bc028f44742b4eab43ca5068123d5afa458594366f49ac5ac3ba3748a1852fe3e74ced360a66dcbac1b59f5a6b0ce7bdf53f8fc6e838f6b27be0e89c52f51  rustc-1.80.1-src.tar.gz
+7b56379b0ed71592144a32fb9af624d4e6af2a1ee7eb84176c6f1556b9edb13a07e6e381b7424b536ba1082705084eb74a7f5e0c010af5319f8cd4c2c9f9ce9c  rust-1.82.0-x86_64-unknown-linux-musl.tar.gz
+84e5494e4e51a3c885a3155ef3b619923f9ad69bb4196dde6b2e1b11f0d2ef6328a019d1a81a1cb39325730ee1c506c8257936cecc93af1b3d3422838bdc029f  rustc-1.83.0-src.tar.gz
 4ecf3fed9495f8813e11e1423e77d57033ca98909709a4a8585cdb8150276c83814609e7ce34aa83b7e463396b62f873b68b16fc31bf8f9132d63bcf8f708926  alpine-move-py-scripts-to-share.patch
-811840cd7fce7c21ed287136716eec101b3ee95f284733f4144f7958f246699879840b5530b1a4e4c01c965cc2525970424aa8e35facb49ad882c73cbf5ffb5c  alpine-target.patch
+8ddc0dc83cd635ad379bfced13043aecd600209565d3014fb9ed831d9d7543642019a344763b144b27993c97ba8669421499f18ffb8045d595972dc8d186f089  alpine-target.patch
 20e34a6764dba6fe64d42292bbb3fcd953bc2ac40d15c35f09ba8ce9db82b0db53423a2abee341ee298e0eebf542071b3f2eddab4a9daa622ddf48bb4ff2b626  do-not-install-libunwind-source.patch
 92916225c21742941aaf415d75d330fe2baf77a8226c076e862f4413068d5dee7b08c4b3182f69957ea9a51a0dcde145031565289015b6e3c31894fb396e4eb1  gcc-eh-libunwind.patch
 b283d31cc8d6559aa639d44f776e97c2a1e0f23c717b6784e549861b881555bd467fa6023180866aae81a9a58c5f83e306940ee645f3c6733a1bdef6130036c9  install-template-shebang.patch
-17f98e9e2384c509b08e7b59b1b0e8ff27c8b1f5e222a4e46a8170f5d0a8493a05a70d2e0de0f11bb7d99587de077c115976e50f69e76963983dd41e72152e86  musl-fix-linux_musl_base.patch
+3f58ee900b817b4f560aa4e01c2665dfc7f21b2c41a66f2a1a60b5148f309681455ff80fc809104a0b45dbcdbf9006fbda56ad69a51097ed4586084f41515296  musl-fix-linux_musl_base.patch
 2d401a01d2c2db92624d672018342907a41aa4a3842708c0a2ab694af0396d568aca4835d1075f244d77c0a4c45e67f893fd175fd97cd7f758090eba9972eba6  need-rpath.patch
 b6bf7be0b2eb2d31b4d9979852d5ec3ebc05d005b82e2f6b02394da6c43502729d32086ec2ffaf42f1006838ea5c2898b82a4172f9053fe08e978adcb711d5fa  need-ssp_nonshared.patch
 90b42eb8c1e395e141f4372cdf1ed8cc59c153b3a219e7f79f7112c571407c1de38ffb306df14b1b9973334c8b95ce0c5e0339ab80024831fb4df8f5a3623bba  9950-alpine-arm-target-linker.patch
 c31fdfe8a9b3411576c75da46645cf0465b9053000a2ab49cf9b2f2733f679d6d33acbf236d67a20e14935d094a685453b7f1840180249f39d610fd0902c3125  check-rustc
+2e1ecef253416be09e12e782763fbf842d7a29e488e3827c407f925c986e520ea316da418d0ffb19c0ef03b0cf06a15576ad58c4ca2904e7d1f016750ec7bd9a  correct-less-r-flag.patch
 "
